--- a/node-cli/package.json
+++ b/node-cli/package.json
@@ -1,12 +1,17 @@
 {
-    "name":"node-cli",
-    "version":"0.0.1",
+    "name": "node-cli",
+    "version": "0.0.1",
     "description": "nodejs cli program",
-    "main":"index.js",
-    "scripts": {
-        
-    },
-    "author":"LSM",
+    "main": "index.js",
+    "scripts": {},
+    "author": "LSM",
     "license": "ISC",
-    "bin":{"cli":"./template.js"}
+    "bin": {
+        "cli": "./command.js"
+    },
+    "dependencies": {
+        "chalk": "^3.0.0",
+        "commander": "^5.0.0",
+        "inquirer": "^7.1.0"
+    }
 }
