--- a/nodebird/package.json
+++ b/nodebird/package.json
@@ -10,6 +10,7 @@
   "author": "LSM",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
@@ -17,6 +18,9 @@
     "express-session": "^1.17.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-kakao": "^1.0.0",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.4",
     "sequelize": "^5.21.5"
   },
