--- a/nodebird-api/package.json
+++ b/nodebird-api/package.json
@@ -4,7 +4,8 @@
   "description": "nodebird api server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app"
   },
   "author": "team-everywhere",
   "license": "ISC",
@@ -16,7 +17,10 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-kakao": "^1.0.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.4",
     "sequelize": "^5.21.5",
