--- a/node-auction/package.json
+++ b/node-auction/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
@@ -21,6 +22,9 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "node-schedule": "^1.3.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.4",
     "sequelize": "^5.21.5"
   }
