--- a/node-auction/package.json
+++ b/node-auction/package.json
@@ -26,6 +26,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "^2.0.4",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.21.5",
+    "socket.io": "^2.3.0",
+    "sse": "0.0.8"
   }
 }
